[tool.poetry]
name = "dmfo"
version = "0.1.0"
description = "Diff and Merge for Office."
authors = ["Christian Knittl-Frank <lcnittl@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/lcnittl/DMFO"
readme = "README.md"
keywords = ["git", "diff", "merge", "office", "mso"]

[tool.poetry.dependencies]
python = "^3.8"
pywin32 = "^228"
colorlog = "^4.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.5.1"

[tool.poetry.scripts]
dmfo = "dmfo:__main__"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = ["colorlog", "dmfo", "pywintypes", "win32com", "win32con", "win32ui"]
