[metadata]
name = DMFO
description = Diff and Merge For Office
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lcnittl/DMFO
author = Christian Knittl-Frank
author_email = lcnittl@gmail.com
license = GPL-3.0
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
download_url = http://pypi.python.org/pypi/DMFO
project_urls =
    GitHub: repo = https://github.com/lcnittl/DMFO
    GitHub: issues = https://github.com/lcnittl/DMFO/issues

[options]
packages = find:
install_requires =
    colorlog>=4.1.0
    pywin32>=228
python_requires = >=3.8
include_package_data = True
package_dir =
    = src
platforms = any
setup_requires =
    setuptools_scm>=4.1
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dmfo = dmfo.__main__:main

[aliases]
release = check -rs sdist bdist_wheel
